--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "timeClock",
+  "name": "timeclock",
   "version": "1.0.0",
   "description": "",
-  "main": "connection.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/corbincad/timeclock.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/corbincad/timeclock/issues"
+  },
+  "homepage": "https://github.com/corbincad/timeclock#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1"
   }
 }
